Bug 1804374 - Imap autosync sometimes stops on sleep/hibernate wake-up. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D164029

--HG--
extra : moz-landing-system : lando